# lamda-challenge

./: .gitignore  README.md
.github/: app.yml  infa.yml
.github/workflows/: app.yml  infra.yml
app/node_api/: .env  package-lock.json  package.json
app/node_api/src/: index.js
app/node_api/src/handler/: create_task.js  get_task.js
app/nodejs-api/: README.md  template.yaml
app/nodejs-api/.aws-sam/: build.toml
app/nodejs-api/events/: create_task.json  get_tasks.json
app/nodejs-api/todo-api/: app.js  package.json
app/nodejs-api/todo-api/handler/: create_task.js  get_task.js
app/nodejs-api/todo-api/utils/: splunklog.js
app/rust-todo/: Cargo.toml  README.md
app/rust-todo/src/: .env  db.rs  main.rs
app/rust-todo/src/handlers/: create_task.rs  http_handler.rs  mod.rs
app/sam-node/sam-app/: template.yaml
app/sam-node/sam-app/.aws-sam/: build.toml
app/sam-node/sam-app/events/: create_task.json  (+1 more)
app/todo/: Cargo.toml
app/todo/src/handlers/: get_tasks.rs
app/todo/src/models/: task.rs
infa/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
infa/modules/: lamda.tf
infa/modules/backend/: main.tf  nodejs-lambda.tf  rds.tf  secrets.tf  sg.tf  variable.tf
infra/: .terraform.lock.hcl  README.md  backend.hcl  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf  versions.tf
infra/.terraform/modules/: modules.json
infra/modules/backend/: dashboard.tf  gateway-api.tf  networking.tf  nodejs-lambda.tf  outputs.tf  rds.tf  secrets.tf  sg.tf
infra/modules/frontend/: main.tf  outputs.tf  variables.tf
(+8 files in other folders)
