[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8"
tokio = { version = "1", features = ["macros"] }
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27" }
tracing = "0.1"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry-stdout = { version = "0.27" }
opentelemetry-otlp = { version = "0.27" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
http = "0.2"
anyhow = "1.0"
